# kabuto

./: .gitignore  .goreleaser.yaml  LICENSE  README.md  SPEC.md  flake.nix  go.mod  pyproject.toml
.github/workflows/: ci.yml  release.yml
cmd/kabuto/: args_test.go  escseq.go  escseq_test.go  help.go  hist.go  keys.go  keys_test.go  main.go  readkeys_test.go  signals_other.go  signals_unix.go
cmd/sekai-kabuka/: main.go
demo/: demo.tape  screenshot.tape
docs/: RESEARCH.md  SUBMISSIONS.md
internal/config/: config.go  config_test.go
internal/fetcher/: cache.go  fetcher.go  fetcher_test.go  range.go  source.go  source_test.go  stooq.go  yahoo.go
internal/i18n/: catalog.go  i18n.go  i18n_test.go  numfmt.go  numfmt_test.go
internal/locale/: locale.go  locale_test.go
internal/render/: b1b3b9_test.go  b2_test.go  detail_test.go  ioctl_other.go  ioctl_unix.go  phasea_test.go  render.go  render_test.go  theme.go  theme_test.go  tz_test.go
internal/symbols/: symbols.go
internal/term/: const_darwin.go  const_linux.go  raw_other.go  raw_unix.go
packaging/: README.md
src/sekai_kabuka/: __main__.py  cli.py  fetcher.py  render.py  symbols.py
tests/: test_fetcher.py  test_render.py
